--- a/lukeburns/layouts/partials/head.html
+++ b/lukeburns/layouts/partials/head.html
@@ -1,8 +1,8 @@
 <head>
-    <link rel="stylesheet" href="/css/bulma.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ .Title }}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="/css/main.css">
-
-    <title>
-        {{ .Title }}
-    </title>
+    <script type="text/javascript" src="/js/main.js"></script>
 </head>
