--- a/lukeburns/layouts/partials/head.html
+++ b/lukeburns/layouts/partials/head.html
@@ -5,4 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <script type="text/javascript" src="/js/main.js"></script>
+    <script defer type="text/javascript" src="https://api.pirsch.io/pirsch.js"
+    id="pirschjs"
+    data-code="dLBbYx7H12yNjKj2nZzpbtGssUOjPBP8"></script>
 </head>
